--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -9,29 +9,64 @@
 
 .footer-container {
   display: flex;
-  justify-content: space-between;
+  justify-content:flex-start;
+  text-align: start;
   flex-wrap: wrap;
   max-width: 1200px;
   margin: auto;
 }
 
 .footer-column {
-  width: 30%;
+  width: 400px;
   box-sizing: border-box;
-  padding: 0 15px;
+  padding: 0 50px;
 }
 
 .logo-box {
-  padding: 10px;
   display: flex;
   justify-content: space-evenly;
   text-align: center;
   align-items: center;
-  margin-bottom: 10px;
+}
+
+.title {
+  margin-top: 1px;
+  font-size: 18px;
+  color: #007bff;
+}
+
+.subscribe-box {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 10px;
+  width: 300px;
+}
+
+.subscribe-box input {
+  padding: 8px;
+  flex: 1;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  transition: box-shadow 0.3s ease;
+}
+
+.subscribe-box input:focus {
+  box-shadow: 0 0 5px 2px rgba(0, 123, 255, 0.7);
+}
+
+.subscribe-box button {
+  background: #007bff;
+  border: none;
+  padding: 8px 15px;
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .footerlogo {
-  height: 40px;
+  height: 100px;
 }
 
 .tagline {
@@ -79,29 +114,6 @@
   color: #007bff;
 }
 
-.subscribe-box {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-top: 10px;
-}
-
-.subscribe-box input {
-  padding: 8px;
-  flex: 1;
-  border-radius: 5px;
-  border: none;
-}
-
-.subscribe-box button {
-  background: #007bff;
-  border: none;
-  padding: 8px 15px;
-  color: rgb(255, 255, 255);
-  border-radius: 5px;
-  cursor: pointer;
-}
-
 .footer-bottom {
   text-align: center;
   border-top: 1px solid gray;
@@ -130,7 +142,7 @@
 /* Responsive Design */
 @media (max-width: 768px) {
   .footer-column {
-    width: 48%;
+    width: auto;
     margin-bottom: 20px;
   }
 
