--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -63,6 +63,17 @@
   margin-bottom: 30px;
 }
 
+.logo{
+  height: 40px;
+}
+
+.logo-container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+}
+
 .avatar {
   border-radius: 50%;
   border: 3px solid #0073e6;
