--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -13,35 +13,38 @@
   font-size: 2rem;
   scrollbar-width: none;
   flex-direction: column;
-  border-radius: 20px;
-  margin: 10px;
 }
 
 .search-bar {
   display: flex;
   margin-top: 10px;
+
 }
 
 .search-bar input {
-  padding: 8px;
+  padding: 18px 40px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 50px;
   outline: none;
-  width: 250px;
+  width: 550px;  
+  height: 50px;
+
 }
 
 .search-bar button {
   padding: 8px 12px;
   margin-left: 5px;
-  background-color: #007bff;
+  background-color: rgba(0, 0, 0, 0.3);
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  width: 150px;
+  border-radius: 50px;
 }
 
 .search-bar button:hover {
-  background-color: #0056b3;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 @media (max-width: 480px) {
