--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -2,6 +2,10 @@
   position: relative;
   height: 100vh;
   background-color: rgb(0, 123, 255);
+  background-image: url("/background19.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .navigation {
@@ -15,31 +19,33 @@
   transition: all 0.3s ease;
   overflow-x: hidden;
   z-index: 100;
-  border: 1px solid #f8f9fa;
-  background-color: rgb(0, 123, 255);
+  background-color: transparent;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .home-nav {
   display: flex;
   align-items: center;
   padding: 15px 50px;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
   cursor: pointer;
-  transition: background 0.3s ease;
+  transition: all 0.3s ease;
+  color: #ffffff;
 }
 
 .home-nav:hover {
-  background-color: rgba(0, 123, 255, 0.8);
+  background-color:  #4ade80;
+  color: #333;
 }
 
 .home-nav a {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #ffffff;
   font-weight: 500;
   font-size: 16px;
 }
+
 
 .home-nav .icon {
   margin-right: 12px;
@@ -161,22 +167,18 @@
   justify-content: center;
 }
 
-.sign-out-container .sign-out {
+.sign-out {
   position: relative;
   list-style: none;
   width: 90%;
   border-radius: 20px;
   transition: background-color 0.3s ease;
   cursor: pointer;
-  background-color: rgba(255, 86, 34);
+  background-color: rgb(255, 65, 65);
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.sign-out-container .sign-out:hover {
-  background-color: rgba(255, 86, 34, 0.9);
-}
-
-.sign-out-container .sign-out a {
+.sign-out a {
   position: relative;
   width: 100%;
   display: flex;
@@ -184,7 +186,7 @@
   color: #fff;
 }
 
-.sign-out-container .sign-out a .icon {
+.sign-out a .icon {
   position: relative;
   display: block;
   min-width: 60px;
@@ -194,7 +196,7 @@
   font-size: 1em;
 }
 
-.sign-out-container .sign-out a .title {
+.sign-out a .title {
   position: relative;
   display: block;
   padding-left: 10px;
