--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -3,7 +3,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 90vh;
   padding: 1.5rem 0;
   display: flex;
   align-items: center;
@@ -13,6 +13,9 @@
   font-size: 2rem;
   scrollbar-width: none;
   flex-direction: column;
+  margin: 30px;
+  margin-top: 0;
+  border-radius: 20px;
 }
 
 .search-bar {
